<resources>
    <string name="app_name">简约记账</string>
    <string name="record_one">记一笔……</string>
    <string name="current_month_payout">本月支出</string>
    <string name="current_month_income">本月收入</string>
    <string name="left_budget">预算剩余</string>
    <string name="view_chart">查看图表分析</string>
    <string name="add_remark">添加备注</string>
    <string name="add_remark_hint">备注</string>
    <string name="cancel">取消</string>
    <string name="ok">确定</string>
    <string name="input_time">请输入时间（24小时制）</string>
    <string name="set_budget">设置预算</string>
    <string name="search_hint">请输入搜索信息</string>
    <string name="search_empty_text">无记录</string>
    <string name="about">关于</string>
    <string name="setting">设置</string>
    <string name="bill_history">账单记录</string>
    <string name="bill_detail">账单详情</string>
    <string name="current_month_bill_history">本月账单记录</string>
    <string name="clean_all_records">清空所有记录</string>
    <string name="no_data">暂无数据</string>
</resources>