<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/grey_200"
    android:orientation="vertical"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/dialog_main_more_about_btn"
            style="@style/DialogMainMoreButtonStyle"
            android:drawableTop="@mipmap/it_guanyu"
            android:text="@string/about"
            app:backgroundTint="@null" />

        <Button
            android:id="@+id/dialog_main_more_setting_btn"
            style="@style/DialogMainMoreButtonStyle"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:drawableTop="@mipmap/it_shezhi"
            android:text="@string/setting"
            app:backgroundTint="@null" />

        <Button
            android:id="@+id/dialog_main_more_bill_history_btn"
            style="@style/DialogMainMoreButtonStyle"
            android:drawableTop="@mipmap/it_jilu"
            android:text="@string/bill_history"
            app:backgroundTint="@null" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:weightSum="3">

        <Button
            android:id="@+id/dialog_main_more_bill_detail_btn"
            style="@style/DialogMainMoreButtonStyle"
            android:layout_marginEnd="30dp"
            android:drawableTop="@mipmap/it_xiqing"
            android:text="@string/bill_detail"
            app:backgroundTint="@null" />

    </LinearLayout>

    <ImageView
        android:id="@+id/dialog_main_more_close_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:src="@mipmap/ih_error" />

</LinearLayout>