<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:padding="10dp">

    <TextView
        android:id="@+id/dialog_record_remark_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_remark"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/dialog_record_remark_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dialog_record_remark_title_tv"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:background="@color/white"
        android:hint="@string/add_remark_hint"
        android:textSize="14sp">

        <requestFocus />
    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dialog_record_remark_et"
        android:orientation="horizontal"
        android:padding="10dp">

        <Button
            android:id="@+id/dialog_record_remark_cancel_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:background="@drawable/btn_dialog_cancel_background"
            android:text="@string/cancel"
            android:textColor="@color/green_200"
            android:textStyle="bold"
            app:backgroundTint="@null" />

        <Button
            android:id="@+id/dialog_record_remark_ok_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:background="@drawable/btn_dialog_ok_background"
            android:text="@string/ok"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:backgroundTint="@null" />

    </LinearLayout>

</RelativeLayout>