<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_200"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="20dp">

        <TextView
            android:id="@+id/lvheader_main_payout_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_month_payout" />

        <TextView
            android:id="@+id/lvheader_main_payout_amount_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/lvheader_main_payout_tv"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/black"
            android:textSize="26sp"
            android:textStyle="bold"
            tools:text="¥ 0.0" />

        <ImageView
            android:id="@+id/lvheader_main_hide_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/lvheader_main_payout_amount_tv"
            android:layout_alignParentEnd="true"
            android:src="@mipmap/ih_show" />

        <TextView
            android:id="@+id/lvheader_main_income_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/lvheader_main_payout_amount_tv"
            android:text="@string/current_month_income" />

        <TextView
            android:id="@+id/lvheader_main_income_amount_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/lvheader_main_payout_amount_tv"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@id/lvheader_main_income_tv"
            android:textColor="@color/black"
            tools:text="¥ 0.0" />

        <TextView
            android:id="@+id/lvheader_main_budget_amount_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/lvheader_main_income_tv"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="5dp"
            android:textColor="@color/black"
            tools:text="¥ 0.0" />

        <TextView
            android:id="@+id/lvheader_main_budget_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/lvheader_main_income_tv"
            android:layout_toStartOf="@id/lvheader_main_budget_amount_tv"
            android:text="@string/left_budget" />

        <TextView
            android:id="@+id/lvheader_main_chart_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/lvheader_main_income_tv"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:drawablePadding="10dp"
            android:text="@string/view_chart"
            android:textColor="@color/green_200"
            app:drawableStartCompat="@mipmap/ih_biaoge" />

    </RelativeLayout>

    <TextView
        android:id="@+id/lvheader_main_today_summary_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:textStyle="bold"
        tools:text="今日支出 ¥0.0 收入 ¥0.0" />

</LinearLayout>